buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
    }
}

apply plugin: 'idea'
apply plugin: 'java'
apply plugin: 'java-library'
apply plugin: 'com.github.johnrengelman.shadow'
apply plugin: 'com.diffplug.spotless'

group 'com.faforever'


sourceCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
    maven { url "https://jitpack.io" }
}

dependencies {
    annotationProcessor("org.projectlombok:lombok:$lombokVersion")
    implementation("org.projectlombok:lombok:$lombokVersion")
    testAnnotationProcessor("org.projectlombok:lombok:$lombokVersion")
    testImplementation("org.projectlombok:lombok:$lombokVersion")

    annotationProcessor("info.picocli:picocli-codegen:$picocliVersion")
    implementation("info.picocli:picocli:$picocliVersion")

    implementation("org.jitsi:ice4j:3.0-66-g1c60acc")
    implementation("com.github.faforever:JJsonRpc:37669e0fed")
    implementation("com.google.guava:guava:$guavaVersion")
    implementation("org.slf4j:slf4j-api:1.7.36")
    implementation("ch.qos.logback:logback-classic:$logbackVersion")
    implementation("ch.qos.logback:logback-core:$logbackVersion")
    implementation("org.java-websocket:Java-WebSocket:1.5.3")
    implementation('com.fasterxml.jackson.core:jackson-databind:2.13.4.2')
    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.4")

    if(javafxClasspath == "compileOnly") {
        compileOnly("org.openjfx:javafx-base:${javafxVersion}:${javafxPlatform}")
        compileOnly("org.openjfx:javafx-controls:${javafxVersion}:${javafxPlatform}")
        compileOnly("org.openjfx:javafx-graphics:${javafxVersion}:${javafxPlatform}")
        compileOnly("org.openjfx:javafx-fxml:${javafxVersion}:${javafxPlatform}")
        compileOnly("org.openjfx:javafx-web:${javafxVersion}:${javafxPlatform}")
        compileOnly("org.openjfx:javafx-media:${javafxVersion}:${javafxPlatform}")
    } else {
        implementation("org.openjfx:javafx-base:${javafxVersion}:${javafxPlatform}")
        implementation("org.openjfx:javafx-controls:${javafxVersion}:${javafxPlatform}")
        implementation("org.openjfx:javafx-graphics:${javafxVersion}:${javafxPlatform}")
        implementation("org.openjfx:javafx-fxml:${javafxVersion}:${javafxPlatform}")
        implementation("org.openjfx:javafx-web:${javafxVersion}:${javafxPlatform}")
        implementation("org.openjfx:javafx-media:${javafxVersion}:${javafxPlatform}")
    }
}

shadowJar {
    def plattformSuffix = javafxPlatform
    if(javafxClasspath == "compileOnly") {
        plattformSuffix = "nojfx"
    }

    getArchiveFileName().set("faf-ice-adapter-${version}-${plattformSuffix}.jar")
    manifest {
        attributes 'Main-Class': 'com.faforever.iceadapter.IceAdapter'
    }
}

tasks.named("check") {
    dependsOn("spotlessCheck")
}

spotless {
    java {
        cleanthat()
        palantirJavaFormat()
    }
}